src/test/resources/insight/annotators/StateInTemplate.soy
{namespace space}

{template .foo}
  {<error descr="@state is only allowed inside an {element} block.">@state</error> myState:= 'test'}
{/template}
